[gd_scene load_steps=57 format=2]

[ext_resource path="res://Scripts/Actor/ActorStates/ActorStates/Actor_Jump.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Actor/Actor.gd" type="Script" id=2]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Idle.png" type="Texture" id=3]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Run.png" type="Texture" id=4]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Jump.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Actor/ActorStates/ActorStates/Actor_OnWall.gd" type="Script" id=6]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/WallGrab.png" type="Texture" id=7]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Slide.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Actor/ActorStates/ActorStates/Actor_OnDash.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Actor/Controllers/PlayerController.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Actor/ActorStates/ActorStates/Actor_OnGround.gd" type="Script" id=11]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Attacks.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Actor/CombatActions/CombatStates/CombatState.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 5, 9.5 )

[sub_resource type="Animation" id=154]
resource_name = "Attack01"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("FlipElements/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipElements/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipElements/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FlipElements/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FlipElements/AttackArea2D/StandardStriker:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=158]
resource_name = "Attack02"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("FlipElements/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipElements/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipElements/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FlipElements/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 9 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FlipElements/AttackArea2D/StandardStriker:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}

[sub_resource type="Animation" id=123]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FlipElements/Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipElements/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipElements/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FlipElements/Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FlipElements/AttackArea2D/StandardStriker:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=130]
resource_name = "fall"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FlipElements/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipElements/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipElements/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FlipElements/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=124]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FlipElements/Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipElements/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipElements/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FlipElements/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="Animation" id=131]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("FlipElements/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipElements/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipElements/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FlipElements/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="Animation" id=125]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FlipElements/Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipElements/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipElements/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FlipElements/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="Animation" id=148]
resource_name = "slide"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("FlipElements/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipElements/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipElements/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FlipElements/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_slide_finished"
} ]
}

[sub_resource type="Animation" id=141]
resource_name = "wallslide"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FlipElements/Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipElements/Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipElements/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FlipElements/Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=155]
animation = "Attack01"

[sub_resource type="AnimationNodeAnimation" id=159]
animation = "Attack02"

[sub_resource type="AnimationNodeAnimation" id=132]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=126]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=133]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=127]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=149]
animation = "slide"

[sub_resource type="AnimationNodeAnimation" id=142]
animation = "wallslide"

[sub_resource type="AnimationNodeStateMachineTransition" id=128]

[sub_resource type="AnimationNodeStateMachineTransition" id=129]

[sub_resource type="AnimationNodeStateMachineTransition" id=134]

[sub_resource type="AnimationNodeStateMachineTransition" id=135]

[sub_resource type="AnimationNodeStateMachineTransition" id=136]

[sub_resource type="AnimationNodeStateMachineTransition" id=137]

[sub_resource type="AnimationNodeStateMachineTransition" id=138]

[sub_resource type="AnimationNodeStateMachineTransition" id=139]

[sub_resource type="AnimationNodeStateMachineTransition" id=140]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=143]

[sub_resource type="AnimationNodeStateMachineTransition" id=144]

[sub_resource type="AnimationNodeStateMachineTransition" id=145]

[sub_resource type="AnimationNodeStateMachineTransition" id=146]

[sub_resource type="AnimationNodeStateMachineTransition" id=147]

[sub_resource type="AnimationNodeStateMachineTransition" id=150]

[sub_resource type="AnimationNodeStateMachineTransition" id=151]

[sub_resource type="AnimationNodeStateMachineTransition" id=152]

[sub_resource type="AnimationNodeStateMachineTransition" id=153]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=156]

[sub_resource type="AnimationNodeStateMachineTransition" id=157]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=160]

[sub_resource type="AnimationNodeStateMachineTransition" id=161]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=121]
states/Attack01/node = SubResource( 155 )
states/Attack01/position = Vector2( 10, 320 )
states/Attack02/node = SubResource( 159 )
states/Attack02/position = Vector2( 270, 333 )
states/fall/node = SubResource( 132 )
states/fall/position = Vector2( 867, 1 )
states/idle/node = SubResource( 126 )
states/idle/position = Vector2( 259, 67 )
states/jump/node = SubResource( 133 )
states/jump/position = Vector2( 672, -128 )
states/run/node = SubResource( 127 )
states/run/position = Vector2( 259, -128 )
states/slide/node = SubResource( 149 )
states/slide/position = Vector2( -6, -65 )
states/wallslide/node = SubResource( 142 )
states/wallslide/position = Vector2( 722, 116 )
transitions = [ "run", "idle", SubResource( 128 ), "idle", "run", SubResource( 129 ), "jump", "idle", SubResource( 134 ), "idle", "jump", SubResource( 135 ), "run", "jump", SubResource( 136 ), "jump", "run", SubResource( 137 ), "run", "fall", SubResource( 138 ), "fall", "idle", SubResource( 139 ), "jump", "fall", SubResource( 140 ), "fall", "wallslide", SubResource( 143 ), "wallslide", "fall", SubResource( 144 ), "wallslide", "jump", SubResource( 145 ), "jump", "wallslide", SubResource( 146 ), "wallslide", "idle", SubResource( 147 ), "idle", "slide", SubResource( 150 ), "run", "slide", SubResource( 151 ), "slide", "run", SubResource( 152 ), "slide", "idle", SubResource( 153 ), "idle", "Attack01", SubResource( 156 ), "Attack01", "idle", SubResource( 157 ), "idle", "Attack02", SubResource( 160 ), "Attack02", "idle", SubResource( 161 ) ]
start_node = "idle"
graph_offset = Vector2( -192, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=122]

[sub_resource type="RectangleShape2D" id=112]
extents = Vector2( 6.5, 8 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 7
collision_mask = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
initial_state = NodePath("ActorStates/Actor_OnGround")

[node name="ActorStates" type="Node" parent="."]

[node name="Actor_OnGround" type="Node" parent="ActorStates"]
script = ExtResource( 11 )

[node name="Actor_Jump" type="Node" parent="ActorStates"]
script = ExtResource( 1 )

[node name="Actor_OnWall" type="Node" parent="ActorStates"]
script = ExtResource( 6 )

[node name="Actor_OnDash" type="Node" parent="ActorStates"]
script = ExtResource( 9 )

[node name="CombatStates" type="Node" parent="."]

[node name="Attack01" type="Node" parent="CombatStates"]
script = ExtResource( 13 )

[node name="Attack02" type="Node" parent="CombatStates"]
script = ExtResource( 13 )
attack_chain_order = 1

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 25 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
limit_left = 0
limit_top = 0
limit_right = 495
limit_bottom = 180
smoothing_enabled = true
smoothing_speed = 7.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Attack01 = SubResource( 154 )
anims/Attack02 = SubResource( 158 )
anims/RESET = SubResource( 123 )
anims/fall = SubResource( 130 )
anims/idle = SubResource( 124 )
anims/jump = SubResource( 131 )
anims/run = SubResource( 125 )
anims/slide = SubResource( 148 )
anims/wallslide = SubResource( 141 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 121 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 122 )

[node name="DowncastLeft" type="RayCast2D" parent="."]
position = Vector2( -3, 5 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="DowncastRight" type="RayCast2D" parent="."]
position = Vector2( 3, 5 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="WallCheckRight" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="WallCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( -2, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="FlipElements" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="FlipElements"]
position = Vector2( 0, -5.5 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 3 )
hframes = 2
vframes = 4
frame = 2

[node name="AttackArea2D" type="Area2D" parent="FlipElements"]
collision_layer = 0
collision_mask = 3

[node name="StandardStriker" type="CollisionShape2D" parent="FlipElements/AttackArea2D"]
position = Vector2( 12.585, -1.489 )
shape = SubResource( 112 )
disabled = true

[connection signal="body_entered" from="FlipElements/AttackArea2D" to="." method="_on_AttackArea2D_body_entered"]
